--- a/.cvsignore
+++ b/.cvsignore
@@ -2,3 +2,5 @@ fontforge_full-20041231.tgz
 fontforge_htdocs-20041231.tgz
 fontforge_full-20050310.tgz
 fontforge_htdocs-20050310.tgz
+fontforge_full-20050502.tgz
+fontforge_htdocs-20050503.tgz
