- Update to 20050729 - Remove .docview patch, looking for HTMLview is upstream so no longer     needed

--- a/.cvsignore
+++ b/.cvsignore
@@ -4,3 +4,5 @@ fontforge_full-20050310.tgz
 fontforge_htdocs-20050310.tgz
 fontforge_full-20050502.tgz
 fontforge_htdocs-20050503.tgz
+fontforge_full-20050729.tgz
+fontforge_htdocs-20050729.tgz
