- Update to 20060125 (bug #170177) - Update docs to 20060114 - Change versioning to reflect upstream and follow packaging guidelines - Provide pfaedit (bug #176548) - Use %{?dist} tag (bug #176472) - Add localizations - No need to remove CVS subdir: fixed upstream - No need to covert man pages to UTF-8: fixed upstream - Fixed DOS line terminators - Use parallel build

--- a/.cvsignore
+++ b/.cvsignore
@@ -1,8 +1,2 @@
-fontforge_full-20041231.tgz
-fontforge_htdocs-20041231.tgz
-fontforge_full-20050310.tgz
-fontforge_htdocs-20050310.tgz
-fontforge_full-20050502.tgz
-fontforge_htdocs-20050503.tgz
-fontforge_full-20050729.tgz
-fontforge_htdocs-20050729.tgz
+fontforge_full-20060125.tar.bz2
+fontforge_htdocs-20060114.tgz
