--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 fontforge_htdocs-20100429.tar.bz2
 fontforge_full-20100501.tar.bz2
+/fontforge_full-20110222.tar.bz2
+/fontforge_htdocs-20110221.tar.bz2
