--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ fontforge_htdocs-20100429.tar.bz2
 fontforge_full-20100501.tar.bz2
 /fontforge_full-20110222.tar.bz2
 /fontforge_htdocs-20110221.tar.bz2
+/fontforge_full-20120731-b.tar.bz2
+/fontforge_htdocs-20120731-b.tar.bz2
