Update to fontforge 2.0 snapshot 20140813
- corrected some scriptlets as per packaging guidelines
- Added new subpackage -doc

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ fontforge_full-20100501.tar.bz2
 /fontforge_htdocs-20110221.tar.bz2
 /fontforge_full-20120731-b.tar.bz2
 /fontforge_htdocs-20120731-b.tar.bz2
+/20140813.tar.gz
