Patch Makefile.am to use system uthash-devel

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ fontforge_full-20100501.tar.bz2
 /fontforge_full-20120731-b.tar.bz2
 /fontforge_htdocs-20120731-b.tar.bz2
 /20140813.tar.gz
+/gnulib-2bf7326.tar.gz
