--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ fontforge_full-20100501.tar.bz2
 /20150612.tar.gz
 /fontforge-20150824.tar.gz
 /fontforge-20160404.tar.gz
+/fontforge-20161001.tar.gz
