--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ fontforge_full-20100501.tar.bz2
 /fontforge-20150824.tar.gz
 /fontforge-20160404.tar.gz
 /fontforge-20161001.tar.gz
+/fontforge-20161004.tar.gz
