--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ fontforge_full-20100501.tar.bz2
 /fontforge-20160404.tar.gz
 /fontforge-20161001.tar.gz
 /fontforge-20161004.tar.gz
+/fontforge-20161005.tar.gz
