--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ fontforge_full-20100501.tar.bz2
 /fontforge-20161001.tar.gz
 /fontforge-20161004.tar.gz
 /fontforge-20161005.tar.gz
+/fontforge-20161012.tar.gz
