--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ fontforge_full-20100501.tar.bz2
 /fontforge-20161004.tar.gz
 /fontforge-20161005.tar.gz
 /fontforge-20161012.tar.gz
+/fontforge-20170731.tar.gz
